# XEMM_CROSS_EXCHANGE_MARKET_MAKING_PACIFICA_HYPERLIQUID

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  RACE_CONDITION_FIX.md  README.md  config.json  create_zip.py  deploy.py  docker-compose.yml  kill_process.sh  run_bot_loop.sh  run_bot_loop_cargo.sh  run_nohup.sh  rust_code_collection.txt  trades_history_example.csv  verify_wallet.js
.claude/: settings.local.json
dashboard_js/: README.md
dashboard_python/: .env.example  config.json  dashboard.py  pac_order_debug.txt
docs/: Cross-Exchange Market Making (XEMM) - Hummingbot.html
examples/: advanced_usage.rs  cancel_all_test.rs  check_hyperliquid_symbols.rs  check_positions_debug.rs  close_ena_position.rs  debug_msgpack.rs  fetch_pump_trades.rs  fetch_recent_trades.rs  fill_detection_test.rs  hyperliquid_market_test.rs  hyperliquid_orderbook.rs  low_latency.rs  pacifica_orderbook.rs  pacifica_orderbook_rest_test.rs  rebalancer.rs  rebalancer_cross_exchange.rs  simple_trade.rs  test_aggressive_fill_detection.rs  test_btc_orders.rs  test_eth_orders.rs  test_hl_l2_snapshot.rs  test_hyperliquid_trade_history.rs  test_meta.rs  test_meta_parse.rs  test_pacifica_trade_history.rs  test_pengu_orders.rs  test_price_rounding.rs  test_pump_orders.rs  test_xpl_orders.rs  trading_example.rs  verify_wallet.rs  ws_cancel_all_test.rs  xemm_calculator.rs
src/: app.rs  config.rs  csv_logger.rs  lib.rs  main.rs  trade_fetcher.rs
standalone-utils/: .env.example  .gitignore  README.md  cancel-all-orders.js  cleanup-all-positions.js  config.json  (+5 more)
(+79 files in other folders)
