[package]
name = "xemm_rust"
version = "0.1.0"
edition = "2021"
default-run = "xemm_rust"

[lib]
name = "xemm_rust"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
futures-util = "0.3"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
ed25519-dalek = "2.1"
bs58 = "0.5"
dotenv = "0.15"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = "0.4"
csv = "1.3"
ethers = { version = "2.0", features = ["legacy"] }
rmp-serde = "1.1"
hex = "0.4"
colored = "2.1"
